--- a/CPU_Simulator.vcxproj
+++ b/CPU_Simulator.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="process.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="scheduler.cpp" />
+    <ClCompile Include="Storage.cpp" />
     <ClCompile Include="task.cpp" />
     <ClCompile Include="task_schedule.cpp" />
     <ClCompile Include="thread.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="process.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="scheduler.h" />
+    <ClInclude Include="Storage.h" />
     <ClInclude Include="system.h" />
     <ClInclude Include="task.h" />
     <ClInclude Include="task_schedule.h" />
