--- a/CPU_Simulator.vcxproj.filters
+++ b/CPU_Simulator.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="scheduler.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Storage.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cpu.h">
@@ -90,6 +93,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="system.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Storage.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
