--- a/CPU_Simulator.vcxproj.filters
+++ b/CPU_Simulator.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Storage.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="system.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cpu.h">
